# bootloader-nrf51

./: CMakeLists.txt  README.md  justfile  nrf51822.x
cmake/: arm-cortex-m.toolchain.cmake  nrf-sdk.cmake
src/: startup_nrf51.c
